# rustic_euler

./: Cargo.toml  README.md
pkg/prime/: Cargo.toml
pkg/prime/src/: lib.rs
pkg/series/: Cargo.toml
pkg/series/src/: lib.rs
src/lib/: p0001.rs  p0002.rs  p0003.rs  p0004.rs  p0005.rs  p0006.rs  p0007.rs  p0008.rs  p0009.rs  p0010.rs  p0011.rs  p0012.rs  problems.rs
